--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "author": "Ricardo Amorim",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^12.7.0"
+    "bcrypt": "^5.1.0",
+    "cypress": "^12.7.0",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
+    "pg": "^8.10.0"
   }
 }
